Bug 311118 - KPhotoalbum doesn't start without mplayer2
Summary: KPhotoalbum doesn't start without mplayer2
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT master
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-03 21:39 UTC by Johannes Zarl-Zierl
Modified: 2013-05-26 22:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2012-12-03 21:39:09 UTC
On Fedora 17, the only mplayer version in the default repositories seems to be kmplayer. Yet, even if I have that installed, kphotoalbum requests that I install mplayer and refuses to start.

A better solution would be to fail gracefully and have reduced functionality (or get the video length/thumbnails using some other means).
Comment 1 Jesper Pedersen 2012-12-11 06:44:56 UTC
While I in theory agree that that would be a better solution, it would complicate the KPA code substantially, meaning reduce time for other bugfixes and new features.

Installing mplayer ought not to be such a big deal, IMHO
Comment 2 David 2013-05-26 09:50:23 UTC
I have mplayer installed, from Debian Sid repositories. KPhotoalbum insists on mplayer2. Only repository I can get that from is deb-multimedia. Given the not-always-friendly relations between Debian and Deb Multimedia, it seems rather silly to add a dependency on something NOT in standard Debian repositories.
Comment 3 Johannes Zarl-Zierl 2013-05-26 12:51:23 UTC
(In reply to comment #2)
> I have mplayer installed, from Debian Sid repositories. KPhotoalbum insists
> on mplayer2. 

KPhotoalbum does not insist on mplayer2. When only mplayer is installed, a message is shown advising the user that mplayer2 gives better results in some cases. You can disable the message by checking "Don't show this message again." before pressing ok.

> Only repository I can get that from is deb-multimedia. Given
> the not-always-friendly relations between Debian and Deb Multimedia, it
> seems rather silly to add a dependency on something NOT in standard Debian
> repositories.

mplayer2 is part of the official debian unstable repository:
http://packages.debian.org/sid/mplayer2
Comment 4 Johannes Zarl-Zierl 2013-05-26 22:09:50 UTC
Git commit a397ba64fa2149a78b4e21f458e0c0723086601b by Johannes Zarl.
Committed on 27/05/2013 at 00:06.
Pushed by johanneszarl into branch 'master'.

Run without video thumbnail/length support when mplayer is missing.

When mplayer is missing, just show a messagebox advising the user to
install mplayer instead of bailing out.
When mplayer is not available, also don't spawn video-related background
jobs.

M  +1    -0    BackgroundJobs/HandleVideoThumbnailRequestJob.cpp
M  +9    -4    DB/NewImageFinder.cpp
M  +6    -0    ImageManager/AsyncLoader.cpp
M  +20   -14   MainWindow/Window.cpp

http://commits.kde.org/kphotoalbum/a397ba64fa2149a78b4e21f458e0c0723086601b