Run without video thumbnail/length support when mplayer is missing.

When mplayer is missing, just show a messagebox advising the user to
install mplayer instead of bailing out.
When mplayer is not available, also don't spawn video-related background
jobs.

BUG: 311118